--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^9.4.2",
     "cssnano": "^4.1.7",
+    "dotenv": "^6.2.0",
     "postcss-easy-import": "^3.0.0",
     "tailwindcss": "^0.7.2"
   }
