too many changes. Mostly handling switching between search view and back to index.

--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,19 @@ node_modules
 .next/static/development/pages/index.js.map
 .next/static/runtime/webpack.js
 .next/static/runtime/webpack.js.map
+.next/build-manifest.json
+.next/server/pages-manifest.json
+.next/server/static/development/pages/_app.js
+.next/server/static/development/pages/_app.js.map
+.next/server/static/development/pages/index.js
+.next/server/static/development/pages/index.js.map
+.next/static/chunks/styles.js
+.next/static/chunks/styles.js.map
+.next/static/css/styles.chunk.css
+.next/static/css/styles.chunk.css.map
+.next/static/development/pages/_app.js
+.next/static/development/pages/_app.js.map
+.next/static/development/pages/index.js
+.next/static/development/pages/index.js.map
+.next/static/runtime/webpack.js
+.next/static/runtime/webpack.js.map
